--- a/week10_Reinforce/week10_Reinforce_practice.ipynb
+++ b/week10_Reinforce/week10_Reinforce_practice.ipynb
@@ -416,11 +416,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-f3bb14bfa4e4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Your code: define optimizers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1e-3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mtrain_on_session\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstates\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrewards\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.99\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mentropy_coef\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1e-3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \"\"\"\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Your code: define optimizers\n",
     "optimizer = torch.optim.Adam(model.parameters(), 1e-3)\n",
@@ -433,10 +445,10 @@
     "    \"\"\"\n",
     "\n",
     "    # cast everything into torch tensors\n",
-    "    states = torch.tensor(states, dtype=torch.float32)\n",
-    "    actions = torch.tensor(actions, dtype=torch.int32)\n",
-    "    cumulative_returns = np.array(get_cumulative_rewards(rewards, gamma))\n",
-    "    cumulative_returns = torch.tensor(cumulative_returns, dtype=torch.float32)\n",
+    "    states = torch.tensor(states, dtype=torch.float32).requires_grad()\n",
+    "    actions = torch.tensor(actions, dtype=torch.int32).requires_grad()\n",
+    "    cumulative_returns = np.array(get_cumulative_rewards(rewards, gamma)).requires_grad()\n",
+    "    cumulative_returns = torch.tensor(cumulative_returns, dtype=torch.float32).requires_grad()\n",
     "\n",
     "    # predict logits, probas and log-probas using an agent.\n",
     "    logits = model(states)\n",
