--- a/week15_generative/week15_VAE_practice.ipynb
+++ b/week15_generative/week15_VAE_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,23 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cuda:0') if torch.cuda.is_available() else torch.device('cpu')"
+    "#device = torch.device('cuda:0') if torch.cuda.is_available() else torch.device('cpu')\n",
+    "device = torch.device('cpu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda:0\n"
+      "cpu\n"
      ]
     }
    ],
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,15 +133,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data\\MNIST\\raw\\train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████▉| 9887744/9912422 [00:26<00:00, 556741.39it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data\\MNIST\\raw\\train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0it [00:00, ?it/s]\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\\train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "32768it [00:00, 82276.95it/s]                                                  \n",
+      "\n",
+      "0it [00:00, ?it/s]\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data\\MNIST\\raw\\train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./data\\MNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|                                              | 0/1648877 [00:00<?, ?it/s]\u001b[A\n",
+      "  1%|▎                             | 16384/1648877 [00:00<00:14, 116121.59it/s]\u001b[A\n",
+      "  3%|▉                             | 49152/1648877 [00:00<00:11, 138345.24it/s]\u001b[A\n",
+      "  6%|█▊                            | 98304/1648877 [00:00<00:08, 172813.07it/s]\u001b[A\n",
+      " 10%|██▉                          | 163840/1648877 [00:00<00:06, 216514.68it/s]\u001b[A\n",
+      " 15%|████▎                        | 245760/1648877 [00:00<00:05, 267469.78it/s]\u001b[A\n",
+      " 20%|█████▊                       | 327680/1648877 [00:01<00:03, 331503.60it/s]\u001b[A\n",
+      " 23%|██████▊                      | 385024/1648877 [00:01<00:03, 372100.96it/s]\u001b[A\n",
+      " 27%|███████▊                     | 442368/1648877 [00:01<00:02, 409606.21it/s]\u001b[A\n",
+      " 32%|█████████▏                   | 524288/1648877 [00:01<00:02, 473472.20it/s]\u001b[A\n",
+      " 36%|██████████▎                  | 589824/1648877 [00:01<00:02, 507984.60it/s]\u001b[A\n",
+      " 40%|███████████▌                 | 655360/1648877 [00:01<00:02, 475794.46it/s]\u001b[A\n",
+      " 46%|█████████████▎               | 753664/1648877 [00:01<00:01, 546891.59it/s]\u001b[A\n",
+      " 52%|██████████████▉              | 851968/1648877 [00:01<00:01, 599597.15it/s]\u001b[A\n",
+      " 56%|████████████████▎            | 925696/1648877 [00:01<00:01, 625369.56it/s]\u001b[A\n",
+      " 61%|█████████████████▌           | 999424/1648877 [00:02<00:01, 589092.43it/s]\u001b[A\n",
+      " 66%|██████████████████▎         | 1081344/1648877 [00:02<00:00, 586522.96it/s]\u001b[A\n",
+      " 72%|████████████████████        | 1179648/1648877 [00:02<00:00, 573673.07it/s]\u001b[A\n",
+      " 78%|█████████████████████▊      | 1286144/1648877 [00:02<00:00, 575082.67it/s]\u001b[A\n",
+      " 84%|███████████████████████▌    | 1384448/1648877 [00:02<00:00, 592593.61it/s]\u001b[A\n",
+      " 88%|████████████████████████▌   | 1449984/1648877 [00:02<00:00, 547308.94it/s]\u001b[A\n",
+      " 91%|█████████████████████████▌  | 1507328/1648877 [00:03<00:00, 507611.78it/s]\u001b[A\n",
+      " 96%|██████████████████████████▉ | 1589248/1648877 [00:03<00:00, 482716.28it/s]\u001b[A\n",
+      "\n",
+      "0it [00:00, ?it/s]\u001b[A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data\\MNIST\\raw\\t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "8192it [00:00, 28132.66it/s]                                                   \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "9920512it [00:40, 556741.39it/s]                                               \n",
+      "1654784it [00:22, 482716.28it/s]                                               \u001b[A"
+     ]
+    }
+   ],
    "source": [
+    "data_root = \"./data\"\n",
     "train_loader = torch.utils.data.DataLoader(\n",
     "    dataset=torchvision.datasets.MNIST(\n",
     "        root=data_root,\n",
     "        train=True,\n",
-    "        transform=mnist_transformations\n",
+    "        transform=mnist_transformations,\n",
+    "        download = True\n",
     "    ),\n",
     "    batch_size=BATCH_SIZE,\n",
     "    shuffle=SHUFFLE_DATASET,\n",
@@ -150,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,8 +326,8 @@
     "            nn.Dropout(0.3)\n",
     "        ])\n",
     "        \n",
-    "        self.mu_repr = # <YOUR CODE HERE>\n",
-    "        self.log_sigma_repr = # <YOUR CODE HERE> \n",
+    "        self.mu_repr = nn.Linear(intermediate_dims[1], latent_dim)\n",
+    "        self.log_sigma_repr = nn.Linear(intermediate_dims[1], latent_dim)\n",
     "        \n",
     "        self.decoder = nn.Sequential(*[\n",
     "            nn.Linear(latent_dim, intermediate_dims[1]),\n",
@@ -219,7 +350,7 @@
     "        return mu_values, log_sigma_values, latent_repr\n",
     "    \n",
     "    def _reparametrize(self, sample, mu_values, log_sigma_values):\n",
-    "        latent_sample = # <YOUR CODE HERE>\n",
+    "        latent_sample = (sample + mu_values)\n",
     "        return latent_sample\n",
     "\n",
     "    def forward(self, x, raw_sample=None):\n",
@@ -233,6 +364,29 @@
     "        reconstructed_repr = self.decoder(latent_sample)\n",
     "        \n",
     "        return reconstructed_repr, latent_sample, mu_values, log_sigma_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9000, 0.9000],\n",
+       "        [0.9000, 0.9000]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.zeros((2, 2))\n",
+    "x = 0.9\n",
+    "a + x"
    ]
   },
   {
@@ -1660,9 +1814,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3_research env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3_reseach"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1674,7 +1828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
